add --add-modules jdk.unsupported when bootstrapping
the jdk 11 doesn't include jdk.unsupported by default and the plugin
perfer actually requires it when bootstrapping (to generate the
builders)