@@ -14,5 +14,6 @@ dir /s /b /a:-d src\main\java > bootstrap\files.txt
           @bootstrap\files.txt
 
 "%java%" --module-path bootstrap/modules;deps ^
+         --add-modules jdk.unsupported ^
          --upgrade-module-path bootstrap/modules ^
          --module com.github.forax.pro.bootstrap/com.github.forax.pro.bootstrap.Bootstrap
